# Quaternion_learning

./: 3DUnet_sweep.py  README.md  data_augmentation.py  ebauche.ipynb  loss.ipynb  pyproject.toml  rotnet3dv2 (4).ipynb  rotnet_latest_version.py
.ipynb_checkpoints/: data_augmentation-checkpoint.py  ebauche-checkpoint.ipynb  loss-checkpoint.ipynb  rotnet3dv2 (4)-checkpoint.ipynb  unet_preds-checkpoint.py
